--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@
 }
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
     color: black;
 }
 
 button {
     cursor: pointer;
-    border: none;
+
     outline: none;
 }
 
@@ -50,7 +50,6 @@ a {
 
     margin-left: auto;
     margin-right: auto;
-
 }
 
 .nav__item {
@@ -60,13 +59,12 @@ a {
     height: 100%;
     padding-top: 31px;
     padding-bottom: 31px;
-    transition: .4s linear;
+    transition: 0.4s linear;
 }
 
 .nav__item:hover {
     background-color: var(--main-hover-cover);
 }
-
 
 .nav__item a {
     font-size: 14px;
@@ -84,10 +82,17 @@ a {
     background-color: var(--main-bg-color);
 }
 
+.title-block__wrapper {
+    display: flex;
+    justify-content: space-between;
+}
 
+.title-block__left-item,
+title-block__right-item {
+    flex: 0 0 48%;
+}
 
 .title-block__left-item__title {
-
     font-size: 60px;
     font-weight: 800;
     text-transform: uppercase;
@@ -96,7 +101,7 @@ a {
 }
 
 .title-block__left-item__description {
-    width: 45%;
+    max-width: 510px;
     font-size: 16px;
     font-weight: 400;
     color: rgba(0, 0, 0, 0.702);
@@ -106,19 +111,35 @@ a {
     margin-bottom: 60px;
 }
 
-
 .btn {
     text-align: center;
     font-weight: bold;
-    border: none;
+    border: var(--main-hover-cover) 3px solid;
     border-radius: 5px;
     padding: 20px 60px;
     font-size: 18px;
 }
 
-.btn-red {
+.btn-bg-red {
     color: var(--main-bg-color);
     background-color: var(--main-hover-cover);
+    transition: 0.4s linear;
+}
+
+.btn-bg-red:hover {
+    background-color: transparent;
+    color: var(--main-hover-cover);
+}
+
+.btn-bg-white {
+    color: var(--main-hover-cover);
+    background-color: transparent;
+    transition: 0.4s linear;
+}
+
+.btn-bg-white:hover {
+    background-color: var(--main-hover-cover);
+    color: var(--main-bg-color);
 }
 
 .title-block__right-item {
@@ -136,9 +157,81 @@ a {
     background: none;
     width: 100%;
     height: 100%;
+    border: none;
 }
 
 .video {
     width: 100%;
     height: 100%;
+}
+
+
+.why-we {
+    padding-top: 100px;
+
+    margin-bottom: 100px;
+}
+
+.why-we .container {
+    padding-bottom: 40px;
+    border-bottom: 1px solid #c4c0b1;
+}
+
+.why-we__wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.why-we__left-item {
+    flex: 0 0 48%;
+}
+
+.why-we__right-item {
+    flex: 0 0 48%;
+}
+
+.left-item__title {
+    font-size: 42px;
+    color: rgba(0, 0, 0, 0.8);
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1.31;
+    margin-bottom: 50px;
+}
+
+.left-item__description {
+    font-size: 16px;
+    line-height: 1.75;
+    text-align: left;
+    max-width: 500px;
+    margin-bottom: 55px;
+}
+
+.right-item__wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.why-we__right-item__item {
+    flex: 0 0 48%;
+    margin-bottom: 58px;
+}
+
+.right-item__item-img {
+    margin-bottom: 25px;
+    max-width: 45px;
+    max-height: 45px;
+}
+
+.right-item__item-title {
+    margin-bottom: 15px;
+    font-size: 27px;
+    color: rgba(0, 0, 0, 0.702);
+    line-height: 1.2;
+}
+
+.right-item__item-text {
+    max-width: 270px;
 }
