--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,9 @@ a {
   .container {
     max-width: 90%;
   }
+  .header .container {
+    max-width: 100%;
+  }
 }
 
 .nav {
@@ -108,6 +111,13 @@ a {
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: var(--main-bg-color);
+}
+
+@media (max-width: 678px) {
+  .title-block {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
 }
 
 .title-block__wrapper {
@@ -242,6 +252,13 @@ title-block__right-item {
   margin-bottom: 100px;
 }
 
+@media (max-width: 678px) {
+  .why-we {
+    padding-top: 40px;
+    margin-bottom: 40px;
+  }
+}
+
 .why-we .container {
   padding-bottom: 40px;
   border-bottom: 1px solid #c4c0b1;
@@ -345,6 +362,13 @@ title-block__right-item {
   padding-bottom: 100px;
 }
 
+@media (max-width: 678px) {
+  .feature-product {
+    padding-bottom: 50px;
+  }
+}
+
+
 .feature-product__title {
   font-size: 38px;
   color: rgba(0, 0, 0, 0.8);
@@ -379,6 +403,8 @@ title-block__right-item {
 @media (max-width: 678px) {
   .feature-product__tabs-wrapper {
     justify-content: space-between;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 }
 
@@ -598,6 +624,14 @@ div.active {
   padding-bottom: 140px;
 }
 
+
+@media (max-width: 678px) {
+  .subscribe {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+}
+
 .subscribe__title {
   font-size: 42px;
   font-weight: bold;
@@ -660,6 +694,13 @@ div.active {
 .get-in-touch {
   margin-top: 110px;
   margin-bottom: 110px;
+}
+
+@media (max-width: 678px) {
+  .get-in-touch {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
 }
 
 .get-in-touch__title {
